<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgDetailFrag"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_no_image"
            android:contentDescription="@string/content_description"
            app:riv_mutate_background="true"
            app:riv_corner_radius="50dip"
            app:riv_oval="true"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibtnDetailFrag_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/ic_edit"
            android:background="?android:selectableItemBackground"
            app:layout_constraintLeft_toRightOf="@+id/imgDetailFrag"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imgDetailFrag"
             />

        <ImageButton
            android:id="@+id/ibtnDetailFrag_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="?android:selectableItemBackground"
            android:src="@mipmap/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/imgDetailFrag"
            app:layout_constraintLeft_toRightOf="@+id/ibtnDetailFrag_Edit"
            app:layout_constraintRight_toLeftOf="@+id/ibtnDetailFrag_Direction"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <ImageButton
            android:id="@+id/ibtnDetailFrag_Direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_direction"
            android:background="?android:selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imgDetailFrag"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <TextView
            android:id="@+id/txtDetailFrag_PlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/text_place_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgDetailFrag" />

        <EditText
            android:id="@+id/edtDetailFrag_PlaceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="none"
            android:enabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailFrag_PlaceName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/txtDetailFrag_PlaceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/text_place_address"
            app:layout_constraintTop_toBottomOf="@+id/edtDetailFrag_PlaceName"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edtDetailFrag_PlaceAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="none"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailFrag_PlaceAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/txtDetailFrag_PlaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/text_place_description"
            app:layout_constraintTop_toBottomOf="@+id/edtDetailFrag_PlaceAddress"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edtDetailFrag_PlaceDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="none"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailFrag_PlaceDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvDetailFrag_Map"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDetailFrag_PlaceDescription"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mvDetailFrag_Map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"></com.google.android.gms.maps.MapView>


        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>