<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_list_layout_padding">

    <TextView
        android:id="@+id/txtListFrag_NoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="@dimen/txt_size"
        android:text="@string/text_no_data_available"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvListFrag_Places"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_place">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabListFrag_AddPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/ic_add" />

</RelativeLayout>